[workspace]
resolver = "2"
members = [
    "osm",
    "rs_concaveman",
    "osm_tool"
]

[workspace.dependencies]
thiserror = "1.0"
error-stack = "0.4"
env_logger = "0.10"
log = "0.4"
clap = { version = "4.5", features = ["cargo", "unstable-doc"] }
prost = { version = "0.13"}
prost-build = { version = "0.13"}
serde = { version = "1.0" }
bytemuck = { version = "1.12" }
geo = { version = "0.29.3", default-features = false }
sled = { version = "0.34" }
rstar = { version = "0.12" }
itertools = { version = "0.13" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
bincode = "1.3.3"

[profile.release]
lto = "thin"
opt-level = 3
strip = true