[package]
name = "osm"
version = "0.1.0"
edition = "2021"

[features]
routing = []
tile_writer = []

[dependencies]
itertools = { workspace = true }
thiserror = { workspace = true }
error-stack = { workspace = true }
serde = { workspace = true, features = ["derive"]}
rusqlite = { workspace = true }
rstar = { workspace = true, features = ["serde"] }
geo = { workspace = true, features = ["use-serde"]}
bincode = { workspace = true }
rustc-hash = "2.0.0"
threadpool = "1.8.1"
derivative = "2.2.0"
flate2 = "1.1.5"
reqwest = { version = "0.12.24", features = ["blocking"] }
log = "0.4.28"
openssl = { version = "0.10", features = ["vendored"] }